Generate docs for add resource to user api
